--- a/FAZA_2.ipynb
+++ b/FAZA_2.ipynb
@@ -1,6 +1,12 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Work done by: Savelii Shaposhnyk (50%),  Yurii Huziienko (50%)",
+   "id": "c8722dd0ada1e1d1"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
@@ -13,13 +19,11 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.feature_selection import f_regression\n",
     "from sklearn.feature_selection import SelectKBest, mutual_info_regression\n",
-    "from sklearn.preprocessing import QuantileTransformer\n",
-    "from sklearn.impute import SimpleImputer\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import QuantileTransformer\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n"
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split"
    ],
    "outputs": [],
    "execution_count": null
@@ -41,28 +45,11 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "from sklearn.model_selection import train_test_split",
-   "id": "8bedbfb76e071579",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
     "y = observation['oximetry'].values\n",
     "x = observation.drop(columns=['oximetry'], axis=1).values\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# train_df = X_train.copy()\n",
-    "# train_df[\"oximetry\"] = y_train\n",
-    "# \n",
-    "# test_df = X_test.copy()\n",
-    "# test_df[\"oximetry\"] = y_test\n",
-    "# \n",
-    "# train_df.to_csv(\"train_raw.csv\", index=False)\n",
-    "# test_df.to_csv(\"test_raw.csv\", index=False)"
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)"
    ],
    "id": "1774a2be3fceaaf8",
    "outputs": [],
@@ -83,11 +70,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "X_train = pd.DataFrame(X_train)"
-   ],
+   "source": "X_train = pd.DataFrame(X_train)",
    "id": "a6693bd4f3a83ac5",
    "outputs": [],
    "execution_count": null
@@ -115,9 +98,15 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": "X_train.isnull().sum().sum()",
+   "id": "b749ea985e341d1c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
-    "from sklearn.impute import SimpleImputer\n",
-    "\n",
     "if X_train.isnull().sum().sum() > 0:\n",
     "    imputer = SimpleImputer(strategy='median')\n",
     "    X_train = imputer.fit_transform(X_train)"
@@ -137,6 +126,14 @@
    "cell_type": "markdown",
    "source": "### Check duplicates",
    "id": "7cb942079421eebf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "X_train.duplicated().sum()",
+   "id": "471409e7585c349e",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -216,11 +213,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "print(\"StandardScaler:\")\n",
     "print(\"Mean: \", np.mean(X_train, axis=0).round(3))\n",
     "print(\"Std: \", np.std(X_train, axis=0).round(3))\n",
     "\n",
-    "print(\"\\nMinMaxScaler:\")\n",
     "print(\"Min: \", np.min(X_train, axis=0).round(3))\n",
     "print(\"Max: \", np.max(X_train, axis=0).round(3))"
    ],
@@ -342,7 +337,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "The results show that most features have a distribution close to normal, but two features have a skewness value > 1, indicating their strong asymmetry. This means that the distribution of these features is asymmetrical.",
+   "source": "The results show that most features have a distribution close to normal, but two features have a skewness |value| > 1, indicating their strong asymmetry. This means that the distribution of these features is asymmetrical.",
    "id": "e23a48a6b14b49d8"
   },
   {
@@ -413,7 +408,6 @@
    "cell_type": "code",
    "source": [
     "plt.figure(figsize=(10,5))\n",
-    "# sns.heatmap(corr_sorted, annot=True, cmap='coolwarm')\n",
     "sns.heatmap(corr_sorted.to_frame(name=\"Pearson r\"), annot=True, cmap=\"coolwarm\")\n",
     "plt.show()"
    ],
