--- a/faza_3_iak1p.ipynb
+++ b/faza_3_iak1p.ipynb
@@ -27,13 +27,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "X_val = observation.drop(columns=['oximetry'], axis=1)\n",
-    "\n",
     "y = observation['oximetry'].values\n",
-    "X = X_val.values\n",
-    "feature_names = X_val.columns\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X = observation.drop(columns=['oximetry'], axis=1).values\n",
+    "feature_names = observation.drop(columns=['oximetry'], axis=1).columns"
    ],
    "id": "67f47f6d72ba6d36",
    "outputs": [],
@@ -42,8 +38,70 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "X_train",
-   "id": "9c012e66142c571",
+   "source": [
+    "from sklearn.preprocessing import QuantileTransformer, StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "quantile_features = [20, 13]\n",
+    "scaled_features = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 14, 15, 16, 17, 18, 19, 21]\n",
+    "\n",
+    "qt = QuantileTransformer(output_distribution='normal', random_state=42, n_quantiles=2)\n",
+    "scaler = StandardScaler()\n",
+    "imputer = SimpleImputer(strategy=\"median\")"
+   ],
+   "id": "f2af502b66992046",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)",
+   "id": "d2d75ed49a480781",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# imputer.fit(X_train)\n",
+    "# \n",
+    "# X_train_imp = imputer.transform(X_train)\n",
+    "# X_test_imp  = imputer.transform(X_test)\n",
+    "\n",
+    "qt.fit(X_train[quantile_features])\n",
+    "scaler.fit(X_train[scaled_features])\n",
+    "\n",
+    "# X_train_tr = X_train_imp.copy()\n",
+    "# X_test_tr  = X_test_imp.copy()\n",
+    "\n",
+    "X_train_tr = X_train.copy()\n",
+    "X_test_tr  = X_test.copy()\n",
+    "\n",
+    "X_train_tr[quantile_features] = qt.transform(X_train[quantile_features])\n",
+    "X_test_tr[quantile_features]  = qt.transform(X_test[quantile_features])\n",
+    "\n",
+    "X_train_tr[scaled_features] = scaler.transform(X_train[scaled_features])\n",
+    "X_test_tr[scaled_features]  = scaler.transform(X_test[scaled_features])"
+   ],
+   "id": "22818f93741fafa0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "X_test_tr",
+   "id": "6165a62ba30fddf9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "X_train_tr",
+   "id": "aa44f0775c884201",
    "outputs": [],
    "execution_count": null
   },
@@ -212,7 +270,7 @@
     "        if x[node.feature_index] <= node.threshold:\n",
     "            return self._traverse_tree(x, node.left)\n",
     "        else:\n",
-    "            return self._traverse_tree(x, node.right)\n"
+    "            return self._traverse_tree(x, node.right)"
    ],
    "id": "18299f0170ce321d",
    "outputs": [],
@@ -226,8 +284,8 @@
     "id3.fit(X_train, y_train)\n",
     "\n",
     "# предсказания\n",
-    "y_pred_test = id3.predict(X_test)\n",
-    "y_pred_train = id3.predict(X_train)\n",
+    "y_pred_test = id3.predict(X_test_tr)\n",
+    "y_pred_train = id3.predict(X_train_tr)\n",
     "\n",
     "# метрики на test\n",
     "# acc_test = accuracy_score(y_test, y_pred_test)\n",
@@ -349,10 +407,10 @@
     "    random_state=42\n",
     ")\n",
     "\n",
-    "dt.fit(X_train, y_train)\n",
+    "dt.fit(X_train_tr, y_train)\n",
     "\n",
-    "y_pred_dt_train = dt.predict(X_train)\n",
-    "y_pred_dt_test = dt.predict(X_test)"
+    "y_pred_dt_train = dt.predict(X_train_tr)\n",
+    "y_pred_dt_test = dt.predict(X_test_tr)"
    ],
    "id": "7100b878ec3e101",
    "outputs": [],
@@ -402,10 +460,10 @@
     "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "log_reg.fit(X_train, y_train)\n",
+    "log_reg.fit(X_train_tr, y_train)\n",
     "\n",
-    "y_pred_lr_train = log_reg.predict(X_train)\n",
-    "y_pred_lr_test = log_reg.predict(X_test)\n",
+    "y_pred_lr_train = log_reg.predict(X_train_tr)\n",
+    "y_pred_lr_test = log_reg.predict(X_test_tr)\n",
     "\n",
     "# results.append(\n",
     "#     evaluate_model(\"LogisticRegression\", \n",
