--- a/faza_3_iak1p.ipynb
+++ b/faza_3_iak1p.ipynb
@@ -65,25 +65,25 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# imputer.fit(X_train)\n",
-    "# \n",
-    "# X_train_imp = imputer.transform(X_train)\n",
-    "# X_test_imp  = imputer.transform(X_test)\n",
+    "imputer.fit(X_train)\n",
     "\n",
-    "qt.fit(X_train[quantile_features])\n",
-    "scaler.fit(X_train[scaled_features])\n",
+    "X_train_imp = imputer.transform(X_train)\n",
+    "X_test_imp  = imputer.transform(X_test)\n",
     "\n",
-    "# X_train_tr = X_train_imp.copy()\n",
-    "# X_test_tr  = X_test_imp.copy()\n",
+    "qt.fit(X_train_imp[quantile_features])\n",
+    "scaler.fit(X_train_imp[scaled_features])\n",
     "\n",
-    "X_train_tr = X_train.copy()\n",
-    "X_test_tr  = X_test.copy()\n",
+    "X_train_tr = X_train_imp.copy()\n",
+    "X_test_tr  = X_test_imp.copy()\n",
     "\n",
-    "X_train_tr[quantile_features] = qt.transform(X_train[quantile_features])\n",
-    "X_test_tr[quantile_features]  = qt.transform(X_test[quantile_features])\n",
+    "# X_train_tr = X_train.copy()\n",
+    "# X_test_tr  = X_test.copy()\n",
     "\n",
-    "X_train_tr[scaled_features] = scaler.transform(X_train[scaled_features])\n",
-    "X_test_tr[scaled_features]  = scaler.transform(X_test[scaled_features])"
+    "X_train_tr[quantile_features] = qt.transform(X_train_imp[quantile_features])\n",
+    "X_test_tr[quantile_features]  = qt.transform(X_test_imp[quantile_features])\n",
+    "\n",
+    "X_train_tr[scaled_features] = scaler.transform(X_train_imp[scaled_features])\n",
+    "X_test_tr[scaled_features]  = scaler.transform(X_test_imp[scaled_features])"
    ],
    "id": "22818f93741fafa0",
    "outputs": [],
@@ -281,33 +281,20 @@
    "cell_type": "code",
    "source": [
     "id3 = ID3Classifier(max_depth=3, min_samples_split=2)\n",
-    "id3.fit(X_train, y_train)\n",
-    "\n",
-    "# предсказания\n",
-    "y_pred_test = id3.predict(X_test_tr)\n",
-    "y_pred_train = id3.predict(X_train_tr)\n",
-    "\n",
-    "# метрики на test\n",
-    "# acc_test = accuracy_score(y_test, y_pred_test)\n",
-    "# prec_test = precision_score(y_test, y_pred_test, average='binary')  # или 'macro', если классов >2\n",
-    "# rec_test = recall_score(y_test, y_pred_test, average='binary')\n",
-    "# \n",
-    "# print(\"ID3 - TEST:\")\n",
-    "# print(\"Accuracy :\", acc_test)\n",
-    "# print(\"Precision:\", prec_test)\n",
-    "# print(\"Recall   :\", rec_test)\n",
-    "\n",
-    "# метрики на train (для проверки overfitting)\n",
-    "# acc_train = accuracy_score(y_train, y_pred_train)\n",
-    "# prec_train = precision_score(y_train, y_pred_train, average='binary')\n",
-    "# rec_train = recall_score(y_train, y_pred_train, average='binary')\n",
-    "# \n",
-    "# print(\"\\nID3 - TRAIN:\")\n",
-    "# print(\"Accuracy :\", acc_train)\n",
-    "# print(\"Precision:\", prec_train)\n",
-    "# print(\"Recall   :\", rec_train)"
+    "id3.fit(X_train, y_train)"
    ],
    "id": "dda687bc7002c380",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "y_pred_train = id3.predict(X_train_tr)\n",
+    "y_pred_test = id3.predict(X_test_tr)"
+   ],
+   "id": "584877dcac18ac63",
    "outputs": [],
    "execution_count": null
   },
@@ -399,20 +386,36 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "\n",
-    "dt = DecisionTreeClassifier(\n",
-    "    criterion='entropy',   # чтобы быть ближе к ID3\n",
-    "    max_depth=3,           # можно менять\n",
-    "    random_state=42\n",
-    ")\n",
+    "def print_metrics(name, y_true, y_pred):\n",
+    "    print(f\"=== {name} ===\")\n",
+    "    print(\"Accuracy: \", accuracy_score(y_true, y_pred))\n",
+    "    print(\"Precision (macro):\", precision_score(y_true, y_pred, average='macro', zero_division=0))\n",
+    "    print(\"Recall (macro):   \", recall_score(y_true, y_pred, average='macro', zero_division=0))\n",
+    "    print()\n",
     "\n",
-    "dt.fit(X_train_tr, y_train)\n",
+    "def evaluate_model(name, y_train, y_train_pred, y_test, y_test_pred, average='binary'):\n",
+    "    acc_train = accuracy_score(y_train, y_train_pred)\n",
+    "    acc_test = accuracy_score(y_test, y_test_pred)\n",
     "\n",
-    "y_pred_dt_train = dt.predict(X_train_tr)\n",
-    "y_pred_dt_test = dt.predict(X_test_tr)"
+    "    prec_train = precision_score(y_train, y_train_pred, average=average)\n",
+    "    prec_test = precision_score(y_test, y_test_pred, average=average)\n",
+    "\n",
+    "    rec_train = recall_score(y_train, y_train_pred, average=average)\n",
+    "    rec_test = recall_score(y_test, y_test_pred, average=average)\n",
+    "\n",
+    "    return {\n",
+    "        \"model\": name,\n",
+    "        \"accuracy_train\": acc_train,\n",
+    "        \"precision_train\": prec_train,\n",
+    "        \"recall_train\": rec_train,\n",
+    "        \"accuracy_test\": acc_test,\n",
+    "        \"precision_test\": prec_test,\n",
+    "        \"recall_test\": rec_test,\n",
+    "    }\n"
    ],
-   "id": "7100b878ec3e101",
+   "id": "fccf16945a25c79b",
    "outputs": [],
    "execution_count": null
   },
@@ -420,26 +423,34 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "acc_train_1 = accuracy_score(y_train, y_pred_dt_train)\n",
-    "acc_train_2 = accuracy_score(y_test, y_pred_dt_test)"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "dt = DecisionTreeClassifier(\n",
+    "    criterion='entropy',   # чтобы быть ближе к ID3\n",
+    "    max_depth=10,     \n",
+    "    min_samples_leaf=8,\n",
+    "    min_samples_split=20,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "dt.fit(X_train_tr, y_train)\n",
+    "\n",
+    "y_pred_dt_train = dt.predict(X_train_tr)\n",
+    "y_pred_dt_test = dt.predict(X_test_tr)\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "print_metrics(\"DecisionTreeClassifier (Train)\",  y_train, y_pred_dt_train)\n",
+    "print_metrics(\"DecisionTreeClassifier (Test)\",  y_test, y_pred_dt_test)\n",
+    "\n",
+    "results.append(\n",
+    "    evaluate_model(\"DecisionTreeClassifier\", \n",
+    "                   y_train, y_pred_dt_train, \n",
+    "                   y_test, y_pred_dt_test,\n",
+    "                   average='binary')  # или 'macro'\n",
+    ")"
    ],
-   "id": "b3acbb45ddbcb3d",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "acc_train_1",
-   "id": "c2609a960100b839",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "acc_train_2",
-   "id": "ce9d2e1e48d49e8e",
+   "id": "7100b878ec3e101",
    "outputs": [],
    "execution_count": null
   },
@@ -457,6 +468,7 @@
     "\n",
     "log_reg = LogisticRegression(\n",
     "    max_iter=1000,\n",
+    "    solver='lbfgs',\n",
     "    n_jobs=-1\n",
     ")\n",
     "\n",
@@ -465,12 +477,15 @@
     "y_pred_lr_train = log_reg.predict(X_train_tr)\n",
     "y_pred_lr_test = log_reg.predict(X_test_tr)\n",
     "\n",
-    "# results.append(\n",
-    "#     evaluate_model(\"LogisticRegression\", \n",
-    "#                    y_train, y_pred_lr_train, \n",
-    "#                    y_test, y_pred_lr_test,\n",
-    "#                    average='binary')  # или 'macro'\n",
-    "# )\n"
+    "print_metrics(\"DecisionTreeClassifier (Train)\",  y_train, y_pred_lr_train)\n",
+    "print_metrics(\"DecisionTreeClassifier (Test)\",  y_test, y_pred_lr_test)\n",
+    "\n",
+    "results.append(\n",
+    "    evaluate_model(\"LogisticRegression\", \n",
+    "                   y_train, y_pred_lr_train, \n",
+    "                   y_test, y_pred_lr_test,\n",
+    "                   average='binary')  # или 'macro'\n",
+    ")\n"
    ],
    "id": "5531b7d831d1d03c",
    "outputs": [],
@@ -480,26 +495,17 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "acc_train_1 = accuracy_score(y_train, y_pred_dt_train)\n",
-    "acc_train_2 = accuracy_score(y_test, y_pred_dt_test)"
+    "y_pred_id3_train = id3.predict(X_train_tr)\n",
+    "y_pred_id3_test = id3.predict(X_test_tr)\n",
+    "\n",
+    "results.append(\n",
+    "    evaluate_model(\"ID3 (custom)\", \n",
+    "                   y_train, y_pred_id3_train, \n",
+    "                   y_test, y_pred_id3_test,\n",
+    "                   average='binary')  # или 'macro'\n",
+    ")"
    ],
-   "id": "66b7ca596f7917ca",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "acc_train_1",
-   "id": "36c435e5ea5dae1",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "acc_train_2",
-   "id": "1fc46970299696ce",
+   "id": "50dba2d3606bc83e",
    "outputs": [],
    "execution_count": null
   },
@@ -512,7 +518,12 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "results_df"
+   ],
    "id": "80bcdfbba0d9280e",
    "outputs": [],
    "execution_count": null
@@ -567,7 +578,7 @@
     "# tree_rules = export_text(dt, feature_names=feature_names)\n",
     "# print(tree_rules)\n",
     "\n",
-    "plt.figure(figsize=(18, 8))\n",
+    "plt.figure(figsize=(16, 8))\n",
     "plot_tree(\n",
     "    dt,\n",
     "    feature_names=feature_names,\n",
@@ -575,8 +586,19 @@
     "    filled=True,\n",
     "    rounded=True\n",
     ")\n",
-    "plt.title(\"DecisionTreeClassifier – learned rules\")\n",
-    "plt.show()"
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# plt.figure(figsize=(18, 8))\n",
+    "# plot_tree(\n",
+    "#     dt,\n",
+    "#     feature_names=feature_names,\n",
+    "#     class_names=[str(c) for c in np.unique(y_train)],\n",
+    "#     filled=True,\n",
+    "#     rounded=True\n",
+    "# )\n",
+    "# plt.title(\"DecisionTreeClassifier – learned rules\")\n",
+    "# plt.show()"
    ],
    "id": "7c3529fb0ca81e3d",
    "outputs": [],
